seguridad del put
