# public/api-docs/models/openapi.yaml
@@ -82,7 +82,7 @@ paths:
       operationId: api_users_cget
       security:
         - MiWApiSecurity:
-            - reader
+            - writer
       responses:
         '200':
           description: Array of users
@@ -178,10 +178,9 @@ paths:
       operationId: api_users_put
       parameters:
         - $ref: '#/components/parameters/ifMatchParam'
-      security:
-        - MiWApiSecurity:
-            - reader
-            - writer
+      #security:
+       # - MiWApiSecurity:
+        #    - writer
       requestBody:
         $ref: '#/components/requestBodies/UserRequestBody'
       responses:
@@ -1318,6 +1317,12 @@ components:
           enum:
             - reader
             - writer
+        fechanac:
+          description: User fechanac
+          type: string
+        activo:
+          description: User name
+          type: string
 #        _links:
 #          description: link relations
 #          type: object
@@ -1340,6 +1345,8 @@ components:
           username: user1508
           email: miw.etsisi@upm.es
           role: reader
+          fechanac: fechanac
+          activo: activo
 #          _links:
 #            parent:
 #              href: /api/v1/users
@@ -1561,11 +1568,19 @@ components:
                 enum:
                   - reader
                   - writer
+              fechanac:
+                description: User fechanac
+                type: string
+              activo:
+                description: User activo
+                type: string
             example:
               username: username
               email: User_email@example.com
               password: User_password
               role: reader
+              fechanac: string
+              activo: activo
     LoginRequestBody:
       description: Registered **username** and **password**
       required: true
